# simulador-tr1

./: .gitignore  CMakeLists.txt  Makefile  README.md  rascunho.cpp
include/: BitArray.hpp  CamadaEnlaceReceptora.hpp  CamadaEnlaceTransmissora.hpp  CamadaFisicaReceptora.hpp  CamadaFisicaTransmissora.hpp  CamadaReceptoraControleDeErro.hpp  CamadaTransmissoraControleDeErro.hpp  Simulacao.hpp  Utils.hpp
lib/: catch.hpp
src/: BitArray.cpp  CamadaEnlaceReceptora.cpp  CamadaEnlaceTransmissora.cpp  CamadaFisicaReceptora.cpp  CamadaFisicaTransmissora.cpp  CamadaReceptoraControleDeErro.cpp  CamadaTransmissoraControleDeErro.cpp  Simulacao.cpp  Utils.cpp  main.cpp
src/test/: BitArrayTest.cpp  UtilsTest.cpp
